[tool.poetry]
name = "atcoder"
version = "0.1.0"
description = ""
authors = ["Shuntaro Shimizu <ut.s.shimizu@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
autopep8 = "^1.5.7"
numpy = "1.18.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
